--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "webpack-cli": "^3.1.0"
   },
   "dependencies": {
-    "bootstrap": "^4.1.3"
+    "bootstrap": "^4.1.3",
+    "npm-run-all": "^4.1.5"
   }
 }
